--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+html,body{
+    height: 100%;
+}
+
+body{
+    background-color: gray;
+}
+
 .contents{
-    background-color: rgb(206, 206, 206);
+    height: 100%;
+    background-color: rgb(0, 0, 255);
+}
+body{
+    background-color: gray;
+}
+
+.contents1{
+    background-color: rgb(0, 0, 255);
+}
+.contents{
+    background-color: rgb(0, 0, 255);
 }
