--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ body{
 .contents{
     width: 100vw;
     height: 100vh;
-    background-color: rgb(65, 105, 225);
+    background-color: rgb(0,191,255);
 }
