--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 }
 
 body{
-    background-color: gray;
+    background-color: 	lightskyblue;
 }
 
 .contents{
     width: 100vw;
     height: 100vh;
-    background-color: rgb(0, 191, 255);
+    background-color: rgb(135, 206, 250);
 }
