--- a/style.css
+++ b/style.css
@@ -12,3 +12,7 @@ body{
     height: 100vh;
     background-color: rgb(135, 206, 250);
 }
+h1 {
+  background: #AFEEEE;/*背景色*/
+  padding: 0.5em;/*文字まわり（上下左右）の余白*/
+}
