--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@ h1 {
   background: #AFEEEE;/*背景色*/
   padding: 0.5em;/*文字まわり（上下左右）の余白*/
 }
+h2 {
+  /*線の種類（実線） 太さ 色*/
+  border-bottom: solid 3px black;
+}
