--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ h1 {
   padding: 0.5em;/*文字まわり（上下左右）の余白*/
 }
 h2 {
-  /*線の種類（実線） 太さ 色*/
-  border-bottom: solid 3px black;
+  padding: 0.1em;/*文字周りの余白*/
+  color: #000000;/*文字色*/
+  background: #7aefff;/*背景色*/
+  border-left: solid 5px #00BFFF;/*左線（実線 太さ 色）*/
 }
