--- a/style.css
+++ b/style.css
@@ -22,3 +22,9 @@ h2 {
   background: #7aefff;/*背景色*/
   border-left: solid 5px #00BFFF;/*左線（実線 太さ 色）*/
 }
+h3 {
+  padding: 0.1em;/*文字周りの余白*/
+  color: #000000;/*文字色*/
+  background: #7aefff;/*背景色*/
+  border-left: solid 5px #00BFFF;/*左線（実線 太さ 色）*/
+}
