--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
   padding: 0.1em;/*文字周りの余白*/
   color: #000000;/*文字色*/
   background: #7aefff;/*背景色*/
-  border-left: solid 5px #389cff;/*左線（実線 太さ 色）*/
+  border-left: solid 5px #3845ff;/*左線（実線 太さ 色）*/
 }
 html {
   height:100%;
