--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2 {
 h3 {
   padding: 0.1em;/*文字周りの余白*/
   color: #000000;/*文字色*/
-  background: #7aefff;/*背景色*/
+  background: #8ff8ff;/*背景色*/
   border-left: solid 5px #3845ff;/*左線（実線 太さ 色）*/
 }
 html {
@@ -54,4 +54,15 @@ body {
   100% {
     transform:translateX(25%);
   }
+}
+.contents {
+  margin: 0px auto;
+  width:1000px;
+  background: #8fd7ff;
+}
+h1 {
+  text-align:center
+}
+h2 {
+  text-align:center
 }
