--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  background-image: linear-gradient(-60deg, #bfedd5 50%, #8eabf6 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
