--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     margin: 0;
     padding: 0;
 }
-h1 {
-  background: #dbddc5;/*背景色*/
-  padding: 0.2em;/*文字まわり（上下左右）の余白*/
-}
 h2 {
   color: #000000;/*文字色*/
   background: #dbddc5;/*背景色*/
@@ -18,6 +14,9 @@ h3 {
 }
 html {
   height:100%;
+  margin: 0px auto;
+  width:1300px;
+  background: #bfedd5;
 }
 
 body {
@@ -57,8 +56,10 @@ body {
   width:1300px;
   background: #bfedd5;
 }
-h1 {
-  text-align:center
+.contents h1 {
+  text-align:center;
+  color: #000000;/*文字色*/
+  background: #dbddc5;/*背景色*/
 }
 h2 {
   text-align:center
@@ -69,7 +70,7 @@ h2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 auto;
+    margin: 0 ;
     padding: 10px 25px;
     color: #313131;
     transition: 0.3s ease-in-out;
